# skippy

./: .gitignore  CMakeLists.txt  QSettings.ini  README.md  TODO.md  reformat_all  render_video
scenes/: cow.xml  earth.xml  jupiter.xml  mirror_refl.xml  moving_cube.xml  recursiveSpheres3.xml  recursiveSpheres3_moving_light.xml  reflection.xml  reflective_sphere.xml  robots.xml  rotating_cube.xml  scaling_cube.xml  scene.xml  shadow_test.xml  spot_light_2.xml  texture_sphere.xml  translating_cube.xml
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/filter/: filter.cpp  filter.h
src/lighting/: lightmodel.cpp  lightmodel.h  lights.h
src/primitives/: objectprimitives.h  shape.h  solvers.cpp  solvers.h  worldprimitive.h
src/raytracer/: ray.cpp  ray.h  raytracer.cpp  raytracer.h  raytracerhelper.cpp  raytracerhelper.h  raytracescene.cpp  raytracescene.h
src/texture/: texture.cpp  texture.h
src/utils/: colorutils.cpp  colorutils.h  intersection.cpp  intersection.h  scenedata.h  scenefilereader.cpp  scenefilereader.h  sceneparser.cpp  sceneparser.h
